--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
   <div class="main">
   <div class="calc">
-    <input type="text" id="input" readonly>
+    <h4>Calculator</h4>
+    <input type="text" id="input" readonly placeholder="Enter input eg:5+2">
     <div class="first">
       <button class="clear" onclick="clr()">Clear</button>
       <button class="delete" onclick="del()">Delete</button></div>
